objects/ALTF__Assessment_Answer__c.object
<CustomObject>
    <description>NO CONFIGURATION SUPPORT 

This object is responsible for storing answers to the Assessment module specific to a given opportunity.</description>
    <fields>
        <fullName>ALTF__AltifyId__c</fullName>
        <description>An external ID used for Altify</description>
        <externalId>true</externalId>
        <label>AltifyId</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ALTF__Answer__c</fullName>
        <label>Answer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ALTF__Assessment_Question__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>A lookup to the Assessment Question for an Assessment Answer</description>
        <label>Assessment Questions</label>
        <referenceTo>ALTF__Assessment_Question__c</referenceTo>
        <relationshipLabel>Assessment Answers</relationshipLabel>
        <relationshipName>DM_TAS_Criterion_Answers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ALTF__NoteEntered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NoteEntered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ALTF__Note__c</fullName>
        <label>Note</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ALTF__Opportunity__c</fullName>
        <description>A lookup to the Altify Opportunity for an Assessment Answer</description>
        <label>Altify Opportunities</label>
        <referenceTo>ALTF__Opportunity__c</referenceTo>
        <relationshipName>DM_TAS_Criterion_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Altify Assessment Answer</label>
    <nameField>
        <label>Assessment Criterion Answer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Altify Assessment Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>